--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Money Tracker
+application.vendor=VICTUS
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,28 @@ dist.jar=${dist.dir}/Money_Tracker.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Money_Tracker
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\Administrator\\Documents\\Javalibs\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
+file.reference.commons-beanutils-1.9.4.jar=H:\\JasperReport Stuff\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.2.jar=H:\\JasperReport Stuff\\commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.4.jar=H:\\JasperReport Stuff\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=H:\\JasperReport Stuff\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=H:\\JasperReport Stuff\\commons-logging-1.2.jar
+file.reference.itext-2.1.7.jar=H:\\JasperReport Stuff\\itext-2.1.7.jar
+file.reference.jasperreports-7.0.3.jar=H:\\JasperReport Stuff\\jasperreports-7.0.3.jar
+file.reference.mysql-connector-j-9.5.0.jar-1=H:\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.5.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-7.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
