--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,20 @@ dist.jlink.output=${dist.jlink.dir}/Money_Tracker
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.4.jar=H:\\JasperReport Stuff\\commons-beanutils-1.9.4.jar
+file.reference.commons-beanutils-1.9.4.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\commons-beanutils-1.9.4.jar
 file.reference.commons-collections-3.2.2.jar=H:\\JasperReport Stuff\\commons-collections-3.2.2.jar
+file.reference.commons-collections-3.2.2.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\commons-collections-3.2.2.jar
 file.reference.commons-collections4-4.4.jar=H:\\JasperReport Stuff\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\commons-collections4-4.4.jar
 file.reference.commons-digester-2.1.jar=H:\\JasperReport Stuff\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=H:\\JasperReport Stuff\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\commons-logging-1.2.jar
 file.reference.itext-2.1.7.jar=H:\\JasperReport Stuff\\itext-2.1.7.jar
+file.reference.itext-2.1.7.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\itext-2.1.7.jar
 file.reference.jasperreports-7.0.3.jar=H:\\JasperReport Stuff\\jasperreports-7.0.3.jar
+file.reference.jasperreports-7.0.3.jar-1=D:\\Main Storage\\KULIAH\\SEMESTER 3\\PBO\\UAS\\lib\\jasperreports-7.0.3.jar
+file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\Administrator\\Documents\\Javalibs\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=H:\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
@@ -54,7 +62,15 @@ javac.classpath=\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.jasperreports-7.0.3.jar}
+    ${file.reference.jasperreports-7.0.3.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-collections-3.2.2.jar-1}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.itext-2.1.7.jar-1}:\
+    ${file.reference.jasperreports-7.0.3.jar-1}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
